[project]
name = "tracecert"
version = "0.4.0"
license = { text = "Proprietary - See LICENSE file" }
description = "Making AI-generated software verifiable with continuous audit and certification levels"
authors = [{ name = "Ar8itrat0r" }]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
pdf = ["fpdf2>=2.7.0"]
yaml = ["PyYAML>=6.0"]
enterprise = ["fpdf2>=2.7.0", "PyYAML>=6.0"]

[project.scripts]
tracecert = "tracecert.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["tracecert*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"